--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         kotlin_version = '1.3.41'
         appCompatVersion = "1.1.0"
         roomVersion = '2.2.4'
-        archLifecycleVersion = '2.2.0-rc03'
+        archLifecycleVersion = '2.2.0'
         androidxArchVersion = '2.1.0'
         coreTestingVersion = "2.1.0"
         coroutines = '1.3.2'
@@ -17,6 +17,8 @@ buildscript {
         junitVersion = "4.12"
         testRunnerVersion = "1.2.0"
         navigationVersion = '2.2.1'
+        retrofitVersion = "2.6.0"
+        okhttpLoggingInterceptorVersion = "4.0.0"
     }
     repositories {
         google()
