--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         jUnitVersion_ktx = "1.1.1"
         constraintLayoutVersion = "1.1.3"
         espressoCoreVersion = "3.2.0"
+        pagingVersion = '2.1.1'
         junitVersion = "4.12"
         testRunnerVersion = "1.2.0"
         navigationVersion = '2.2.1'
